Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32792

Memory Leak in QGLWidget::renderText

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.2.0
    • 5.1.0
    • GUI: OpenGL
    • None
    • Windows 8 64 bit, Qt 5.1.0, MinGW 4.8 32 bit
      Windows 7 64 bit, Qt 5.1.0, MinGW 4.8 32 bit
      Ubuntu 12.04 64 bit, Qt 5.1.0, gcc 4.6.3

    Description

      When using QGLWidget::renderText function lot's of memory gets lost.
      The first time this issue occured was on a big project. There I have 6 QGLWidget's which show a 2D OpenGL interface. After commenting out different code fragments, I could bring it down to this function. The two attached screenshots are from an analysis of the original project.
      I also attached a simple Demo app, where you can spawn widgets by pressing a button. You will see with one or two widgets, the memory will grow by a few kilobytes per second. But if you have six widgets (like I have in my project), it's nearly 10MB per second.

      Attachments

        1. artefacts_gl.png
          artefacts_gl.png
          15 kB
        2. leak_01.png
          leak_01.png
          262 kB
        3. leak_02.png
          leak_02.png
          112 kB
        4. MemoryLeakDemo.tar.gz
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            agocs Laszlo Agocs (Inactive)
            wurfkeks Stanley
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes