Fix a memory leak in QGLWidget::renderText

Task-number: QTBUG-32792
Change-Id: Ie9293a1919c1bdf13a5c357a8d2eac303a83d4d4
Reviewed-by: Lars Knoll <lars.knoll@digia.com>
Reviewed-by: Konstantin Ritt <ritt.ks@gmail.com>